[project]
name = "stations-pipelines"
version = "0.1.0"

# Requirements
[dependencies]
Click = "^7.0"

[dev-dependencies]
black = { version = "^18.3-alpha.0", python = "^3.9" }

[build-system]
requires = [
    "setuptools >= 58.0.4"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target_version = ['py38']

[tool.pytest.ini_options]
# Declare custom markers
markers = [
    "integration_test: marks tests as integration tests, which are bit slow (deselect with '-m \"integration_test\"')",
]
# Limit pytest to tests in the listed directories
testpaths = [
    "test",
]
