[project]
name = "stations-pipelines"
version = "0.1.0"

# Requirements
[dependencies]
Click = "^7.0"

[dev-dependencies]

[build-system]
requires = [
    "setuptools >= 58.0.4"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--capture=no",
    "--log-level=WARN",
    "--log-cli-level=DEBUG",
    "--log-cli-format='%(asctime)s %(levelname)s %(message)s'",
    "--log-cli-date-format='%Y-%m-%d %H:%M:%S'",
    "-W ignore::DeprecationWarning"
]
# Limit search for tests to following folders
testpaths = [
    "test", # TODO: move content to tests/unit/ folder
    "tests",
]
# Declare custom markers
markers = [
    "integration_test: marks tests as integration tests (deselect with '-m \"not integration_test\"')",
    "check_datasource: marks tests as datasource check for scheduled github action (deselect with '-m \"not check_datasource\"')",
]
